# abcd-microstructure-pipelines

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
src/abcd_microstructure_pipelines/: __init__.py  masks.py
tests/: test_package.py
